--- a/changelog.html
+++ b/changelog.html
@@ -275,8 +275,38 @@
         <div class="version-block">
             <div class="version-header">
                 <div>
-                    <span class="version-number">v0.4.8</span>
+                    <span class="version-number">v0.4.9</span>
                     <span class="version-badge">LATEST</span>
+                </div>
+                <span class="version-date">December 2025</span>
+            </div>
+            <div class="changes-section">
+                <h3 class="improved">Improved</h3>
+                <ul>
+                    <li>Updated Settings UI</li>
+                    <li>Add border radius option</li>
+                    <li>Minor GUI improvements</li>
+                </ul>
+                <h3 class="fixed">Fixed</h3>
+                <ul>
+                    <li>Fixed issues with stereoscope rendering at different sizes for each FFT option</li>
+                    <li>Additional minor bug fixes</li>
+                </ul>
+            </div>
+            <div class="download-links">
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.4.9/EM-Spec-Setup-0.4.9.exe"
+                    class="download-btn">Windows (.exe)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.4.9/EM-Spec-0.4.9-x64.dmg"
+                    class="download-btn">macOS Intel (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.4.9/EM-Spec-0.4.9-arm64.dmg"
+                    class="download-btn">macOS Silicon (.dmg)</a>
+            </div>
+        </div>
+
+        <div class="version-block">
+            <div class="version-header">
+                <div>
+                    <span class="version-number">v0.4.8</span>
                 </div>
                 <span class="version-date">December 2025</span>
             </div>
