--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
         .header-controls {
             display: flex;
             align-items: center;
-            gap: 15px;
             font-size: 12px;
             color: var(--text-secondary);
         }
@@ -176,6 +175,7 @@
         }
 
         .hero {
+            position: relative;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -189,6 +189,50 @@
             margin-bottom: 20px;
             overflow: hidden;
             aspect-ratio: 10 / 1;
+            transition: opacity 0.2s ease-in-out;
+            cursor: pointer;
+        }
+
+        .hero:hover::before {
+            transition: opacity 0.2s ease-in-out;
+            opacity: 1;
+        }
+
+        .hero:hover::after {
+            transition: opacity 0.2s ease-in-out;
+            opacity: 1;
+        }
+
+        .hero::before {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            transition: opacity 0.2s ease-in-out;
+            text-align: center;
+            align-content: center;
+        }
+
+        .hero::after {
+            content: "▶︎ preview on youtube";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            translate: -50% -50%;
+            /* width: 200px;
+            height: 200px; */
+            font-family: 'SF Mono', monospace;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 2px 6px;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            opacity: 0;
+            transition: opacity 0.2s ease-in-out;
         }
 
         .hero video {
@@ -651,6 +695,22 @@
                 font-size: 30px;
             }
         }
+
+        .topnav-link {
+            transition: all 0.2s ease-in-out;
+        }
+
+        .topnav-link:not(:first-child) {
+            margin-left: 3px;
+        }
+
+        .topnav-link:hover {
+            font-family: 'SF Mono', monospace;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 2px 6px;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
     </style>
 
     <script>
@@ -848,13 +908,18 @@
                 <span>EM-Spec</span>
             </div>
             <div class="header-controls">
-                <span class="version-tag">Version: <span class="version-tag-text">...</span></span>
-                <a href="https://github.com/effree/EM-Spec" target="_blank" class="btn-secondary"
-                    style="border:none; padding:4px;"><i class='bx bxl-github' style="font-size: 18px;"></i></a>
+                <span class="version-tag" style="margin-right: 15px;">Version: <span
+                        class="version-tag-text">...</span></span>
+                <a href="https://github.com/effree/EM-Spec" target="_blank" class="btn-secondary topnav-link"
+                    style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-github'
+                        style="font-size: 18px;"></i></a>
+                <a href="https://youtube.com/effree-meyer" target="_blank" class="btn-secondary topnav-link"
+                    style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-youtube'
+                        style="font-size: 18px;"></i></a>
             </div>
         </header>
 
-        <div class="hero" id="hero">
+        <div class="hero" id="hero" onclick="window.open('https://www.youtube.com/watch?v=bOogeUrEDWA', '_blank');">
             <video src="assets/full-width-example.mp4" autoplay loop muted id="heroVideo"></video>
         </div>
 
