fixed screenshots misaligned on mobile

--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@
 
         .screenshot-thumbs {
             display: flex;
-            gap: 8px;
-            justify-content: flex-end;
+            gap: 0;
+            justify-content: center;
         }
 
         .thumb {
