--- a/changelog.html
+++ b/changelog.html
@@ -275,8 +275,35 @@
         <div class="version-block">
             <div class="version-header">
                 <div>
-                    <span class="version-number">v0.4.9</span>
+                    <span class="version-number">v0.5.0</span>
                     <span class="version-badge">LATEST</span>
+                </div>
+                <span class="version-date">December 2025</span>
+            </div>
+            <div class="changes-section">
+                <h3 class="improved">Improved</h3>
+                <ul>
+                    <li>Reduce Memory Usage by Approximately 100-200mb</li>
+                    <li>Reuce CPU Usage by Approximately 60%</li>
+                    <li>Added report issues link</li>
+                    <li>Added auto-update on/off toggle</li>
+                    <li>Updated M4L device to auto-detect Windows/Mac and User</li>
+                </ul>
+            </div>
+            <div class="download-links">
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.0/EM-Spec-Setup-0.5.0.exe"
+                    class="download-btn">Windows (.exe)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.0/EM-Spec-0.5.0-x64.dmg"
+                    class="download-btn">macOS Intel (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.0/EM-Spec-0.5.0-arm64.dmg"
+                    class="download-btn">macOS Silicon (.dmg)</a>
+            </div>
+        </div>
+
+        <div class="version-block">
+            <div class="version-header">
+                <div>
+                    <span class="version-number">v0.4.9</span>
                 </div>
                 <span class="version-date">December 2025</span>
             </div>
