changed logo font to Urbanist, removed hyphen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         rel="stylesheet">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
         /* Reset & Core Variables derived from reference/settings.css */
         * {
             margin: 0;
@@ -132,10 +134,10 @@
         }
 
         .header-title {
+            font-family: 'Urbanist', sans-serif;
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 400;
             color: #e0e2e5;
-            letter-spacing: 1px;
             text-transform: uppercase;
             display: flex;
             align-items: center;
@@ -908,7 +910,7 @@
         <header class="header-bar">
             <div class="header-title">
                 <img src="assets/icon.png" alt="Logo">
-                <span>EM-Spec</span>
+                <span>EMSPEC</span>
             </div>
             <div class="header-controls">
                 <span class="version-tag" style="margin-right: 15px;">Version: <span
@@ -919,6 +921,9 @@
                 <a href="https://youtube.com/effree-meyer" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-youtube'
                         style="font-size: 18px;"></i></a>
+                <a href="https://discord.gg/ZgvVdrJZ" target="_blank" class="btn-secondary topnav-link"
+                    style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-discord'
+                        style="font-size: 18px;"></i> Help</a>
             </div>
         </header>
 
