--- a/changelog.html
+++ b/changelog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EM-Spec - Changelog</title>
+    <title>EMSPEC - Changelog</title>
     <!-- Boxicons -->
     <link href='https://cdn.boxicons.com/3.0.3/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <!-- Fonts -->
@@ -14,6 +14,8 @@
         rel="stylesheet">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -74,8 +76,9 @@
         }
 
         .logo {
+            font-family: 'Urbanist', sans-serif;
             font-size: 2rem;
-            font-weight: 700;
+            font-weight: 400;
             margin-bottom: 0.5rem;
             color: white;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -265,7 +268,7 @@
 
 <body>
     <div class="header">
-        <h1 class="logo">EM-Spec</h1>
+        <h1 class="logo">EMSPEC</h1>
         <p style="color: var(--text-secondary);">Release History</p>
         <a href="index.html" class="back-link">← Back to Dashboard</a>
     </div>
