--- a/changelog.html
+++ b/changelog.html
@@ -278,8 +278,32 @@
         <div class="version-block">
             <div class="version-header">
                 <div>
-                    <span class="version-number">v0.5.0</span>
+                    <span class="version-number">v0.5.1</span>
                     <span class="version-badge">LATEST</span>
+                </div>
+                <span class="version-date">December 2025</span>
+            </div>
+            <div class="changes-section">
+                <h3 class="improved">Bug Fixes</h3>
+                <ul>
+                    <li>Minor bug fixes</li>
+                    <li>Updated name from EM-Spec to EMSPEC</li>
+                </ul>
+            </div>
+            <div class="download-links">
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-Setup-0.5.1.exe"
+                    class="download-btn">Windows (.exe)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.5.1-x64.dmg"
+                    class="download-btn">macOS Intel (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.5.1-arm64.dmg"
+                    class="download-btn">macOS Silicon (.dmg)</a>
+            </div>
+        </div>
+
+        <div class="version-block">
+            <div class="version-header">
+                <div>
+                    <span class="version-number">v0.5.0</span>
                 </div>
                 <span class="version-date">December 2025</span>
             </div>
