--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         }
 
         ::-webkit-scrollbar-track {
-            background: transparent;
+            background: #101010;
         }
 
         ::-webkit-scrollbar-thumb {
@@ -122,7 +122,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 12px 20px;
+            padding: 5px 20px;
             background: linear-gradient(to bottom, #2a2d38, #23262f);
             border: 1px solid #000;
             border-bottom: 2px solid #000;
@@ -135,7 +135,7 @@
 
         .header-title {
             font-family: 'Urbanist', sans-serif;
-            font-size: 16px;
+            font-size: 20px;
             font-weight: 400;
             color: #e0e2e5;
             text-transform: uppercase;
@@ -145,8 +145,8 @@
         }
 
         .header-title img {
-            width: 24px;
-            height: 24px;
+            width: 40px;
+            height: 40px;
         }
 
         .header-controls {
@@ -947,7 +947,7 @@
                 <span>EMSPEC</span>
             </div>
             <div class="header-controls">
-                <span class="version-tag" style="margin-right: 15px;">Version: <span
+                <span class="version-tag" style="margin-right: 2px;">Latest: <span
                         class="version-tag-text">...</span></span>
                 <a href="https://github.com/effree/EM-Spec" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-github'
