--- a/wiki.html
+++ b/wiki.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMSPEC - Changelog</title>
+    <title>EMSPEC - Wiki</title>
     <!-- Boxicons -->
     <link href='https://cdn.boxicons.com/3.0.3/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <!-- Fonts -->
@@ -304,8 +304,6 @@
         <a href="index.html">
             <h1 class="logo"><img src="assets/icon.png" alt="Logo"> EMSPEC</h1>
         </a>
-        <p style="color: var(--text-secondary);">Release History</p>
-        <a href="index.html" class="back-link">← Back to Dashboard</a>
     </div>
 
     <div class="container">
