--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
                 <a href="https://youtube.com/effree-meyer" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-youtube'
                         style="font-size: 18px;"></i></a>
-                <a href="https://discord.gg/ZgvVdrJZ" target="_blank" class="btn-secondary topnav-link"
+                <a href="https://discord.gg/qtxKqaeepd" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-discord-alt'
                         style="font-size: 18px; padding-right:.5rem;"></i> Help</a>
             </div>
