added wiki, added instructions for 0.6 VST Audio Bridge version

--- a/index.html
+++ b/index.html
@@ -947,17 +947,16 @@
                 <span>EMSPEC</span>
             </div>
             <div class="header-controls">
-                <span class="version-tag" style="margin-right: 2px;">Latest: <span
-                        class="version-tag-text">...</span></span>
+                <span class="version-tag" style="margin-right: 2px;"><span class="version-tag-text">...</span></span>
                 <a href="https://github.com/effree/EM-Spec" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-github'
                         style="font-size: 18px;"></i></a>
-                <a href="https://youtube.com/effree-meyer" target="_blank" class="btn-secondary topnav-link"
-                    style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-youtube'
-                        style="font-size: 18px;"></i></a>
+                <a href="help/index.html" class="btn-secondary topnav-link"
+                    style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bx bx-book-open'
+                        style="font-size: 18px; padding-right:.5rem;"></i> Help</a>
                 <a href="https://discord.gg/qtxKqaeepd" target="_blank" class="btn-secondary topnav-link"
                     style="border:none; display:flex;padding:4px; text-decoration: none;"><i class='bxl bx-discord-alt'
-                        style="font-size: 18px; padding-right:.5rem;"></i> Help</a>
+                        style="font-size: 18px; padding-right:.5rem;"></i> Discord</a>
             </div>
         </header>
 
