--- a/changelog.html
+++ b/changelog.html
@@ -313,8 +313,48 @@
         <div class="version-block">
             <div class="version-header">
                 <div>
-                    <span class="version-number">v0.5.1</span>
+                    <span class="version-number">v0.6.1</span>
                     <span class="version-badge">LATEST</span>
+                </div>
+                <span class="version-date">February 2026</span>
+            </div>
+            <div class="changes-section">
+                <h3 class="improved">New Features</h3>
+                <ul>
+                    <li>Added VST Audio Bridge for ASIO support</li>
+                    <li>Added toggle for VST Audio Mode, and VST installation in settings window</li>
+                    <li>Created pipe for true Stereo Image from VST Audio and Loopback</li>
+                    <li>Added mono enhancement for stereo image
+                    <li>Added Help / Wiki</li>
+                    <li>Added Discord</li>
+                    <li>Added Bug Report</li>
+                    <li>Added CTRL + click to toggle freeze</li>
+                </ul>
+                <h3 class="improved">Improved</h3>
+                <ul>
+                    <li>Improved Mono loopback to Stereo Image visuals</li>
+                    <li>Enhanced visual clarity for lower FFT sizes</li>
+                    <li>Updated brand / icon</li>
+                </ul>
+                <h3 class="improved">Bug Fixes</h3>
+                <ul>
+                    <li>Drag region for Settings window is fixed</li>
+                </ul>
+            </div>
+            <div class="download-links">
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-Setup-0.6.1.exe"
+                    class="download-btn">Windows (.exe)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.6.1-x64.dmg"
+                    class="download-btn">macOS Intel (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.6.1-arm64.dmg"
+                    class="download-btn">macOS Silicon (.dmg)</a>
+            </div>
+        </div>
+
+        <div class="version-block">
+            <div class="version-header">
+                <div>
+                    <span class="version-number">v0.5.1</span>
                 </div>
                 <span class="version-date">December 2025</span>
             </div>
