--- a/changelog.html
+++ b/changelog.html
@@ -309,12 +309,40 @@
     </div>
 
     <div class="container">
+        <div class="version-block">
+            <div class="version-header">
+                <div>
+                    <span class="version-number">v0.6.2</span>
+                    <span class="version-badge">LATEST</span>
+                </div>
+                <span class="version-date">February 2026</span>
+            </div>
+            <div class="changes-section">
+                <h3 class="improved">Bug Fixes</h3>
+                <ul>
+                    <li>Fixed render defaulting to fallback CPU over GPU on Mac</li>
+                    <li>Added universal binary for macOS on GitHub</li>
+                    <li>Added instructions for ARM64 macOS "Damaged" error</li>
+                </ul>
+            </div>
+            <div class="download-links">
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.2/EMSPEC-Setup-0.6.2.exe"
+                    class="download-btn">Windows (.exe)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.2/EMSPEC-0.6.2-x64.dmg"
+                    class="download-btn">macOS Intel (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.2/EMSPEC-0.6.2-arm64.dmg"
+                    class="download-btn">macOS Silicon (.dmg)</a>
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.2/EMSPEC-0.6.2-universal.dmg"
+                    class="download-btn">macOS Universal (.dmg)</a>
+
+            </div>
+        </div>
+
 
         <div class="version-block">
             <div class="version-header">
                 <div>
                     <span class="version-number">v0.6.1</span>
-                    <span class="version-badge">LATEST</span>
                 </div>
                 <span class="version-date">February 2026</span>
             </div>
@@ -342,11 +370,11 @@
                 </ul>
             </div>
             <div class="download-links">
-                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-Setup-0.6.1.exe"
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.1/EMSPEC-Setup-0.6.1.exe"
                     class="download-btn">Windows (.exe)</a>
-                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.6.1-x64.dmg"
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.1/EMSPEC-0.6.1-x64.dmg"
                     class="download-btn">macOS Intel (.dmg)</a>
-                <a href="https://github.com/effree/EM-Spec/releases/download/v0.5.1/EMSPEC-0.6.1-arm64.dmg"
+                <a href="https://github.com/effree/EM-Spec/releases/download/v0.6.1/EMSPEC-0.6.1-arm64.dmg"
                     class="download-btn">macOS Silicon (.dmg)</a>
             </div>
         </div>
